refactor: compile sass root file app.scss

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,7 +7,7 @@
 @use "components/form";
 @use "components/icon";
 
-@use "layout/contact.scss";
+@use "layout/contact";
 
 @use "layout/display";
 @use "layout/sidebar";
