--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,17 +1,27 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 8 | @use "components/icon";
- *   | ^^^^^^^^^^^^^^^^^^^^^^
- *   '
- *   sass\app.scss 8:1  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 8 \2502  @use \"components/icon\";\d\a   \2502  ^^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\app.scss 8:1  root stylesheet";
+* {
+  margin: 0;
+  padding: 0;
 }
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 auto;
+  font-family: "Archivo", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #666;
+  line-height: 1.7;
+}
+
+/*# sourceMappingURL=app.css.map */
