feat: set up app layout; add links to navigation

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,8 +18,12 @@ html {
 body {
   margin: 0 auto;
   font-family: "Archivo", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 400;
   color: #666;
   line-height: 1.7;
+}
+
+img {
+  display: block;
 }
