--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -18,10 +18,88 @@ html {
 body {
   margin: 0 auto;
   font-family: "Archivo", sans-serif;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 400;
   color: #666;
   line-height: 1.7;
+}
+
+img {
+  display: block;
+}
+
+h1 {
+  font-size: 3.6rem;
+}
+
+#app {
+  display: flex;
+  gap: 3.6rem;
+  width: 100%;
+  max-width: 120rem;
+  height: calc(100vh - 6.4rem);
+  margin: 3.2rem auto;
+  padding: 0;
+  overflow: hidden;
+}
+#app .contact,
+#app .message {
+  padding: 2.4rem;
+  border-radius: 2.4rem;
+}
+#app .navigation,
+#app .contact,
+#app .message {
+  border-radius: 2.4rem;
+}
+#app .navigation {
+  flex: 0 0 18rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 3.2rem;
+  padding: 1.6rem 0;
+  background-color: brown;
+  overflow: auto;
+}
+#app .navigation .profile {
+  margin: 0 auto;
+}
+#app .navigation .profile figure img {
+  max-width: 100%;
+  height: 10rem;
+  border: 1px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#app .navigation .profile figure figcaption {
+  margin-top: 0.8rem;
+  text-align: center;
+}
+#app .navigation ul {
+  margin-left: 1.6rem;
+  padding: 0;
+}
+#app .navigation li {
+  list-style: none;
+  margin: 1.6rem 0;
+}
+#app .navigation li a {
+  display: flex;
+  padding: 1.6rem;
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+#app .navigation li a:hover {
+  background-color: yellow;
+}
+#app .contact {
+  flex: 0 0 36rem;
+  background-color: aqua;
+}
+#app .message {
+  flex: 1;
+  background-color: antiquewhite;
 }
 
 /*# sourceMappingURL=app.css.map */
