--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -28,8 +28,22 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   font-size: 3.6rem;
+}
+
+.navigation,
+.navigation a {
+  color: #fff;
+}
+
+.icon {
+  width: 2.4rem;
+  stroke-width: 2px;
 }
 
 #app {
@@ -39,7 +53,6 @@ h1 {
   max-width: 120rem;
   height: calc(100vh - 6.4rem);
   margin: 3.2rem auto;
-  padding: 0;
   overflow: hidden;
 }
 #app .contact,
@@ -53,13 +66,13 @@ h1 {
   border-radius: 2.4rem;
 }
 #app .navigation {
-  flex: 0 0 18rem;
+  flex: 0 0 22rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 3.2rem;
-  padding: 1.6rem 0;
-  background-color: brown;
+  padding: 2.4rem 0 1.6rem;
+  background-color: #f14668;
   overflow: auto;
 }
 #app .navigation .profile {
@@ -68,7 +81,7 @@ h1 {
 #app .navigation .profile figure img {
   max-width: 100%;
   height: 10rem;
-  border: 1px solid white;
+  border: 5px solid white;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -86,12 +99,20 @@ h1 {
 }
 #app .navigation li a {
   display: flex;
+  align-items: center;
+  gap: 0.8rem;
   padding: 1.6rem;
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
+  transition: all 0.2s ease-in-out;
 }
 #app .navigation li a:hover {
-  background-color: yellow;
+  border-right: 5px solid rgb(155, 12, 41);
+  background-color: rgb(224, 54, 88);
+}
+#app .navigation li a:active, #app .navigation li a.active {
+  border-right: 5px solid rgb(155, 12, 41);
+  background-color: rgb(224, 54, 88);
 }
 #app .contact {
   flex: 0 0 36rem;
