--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -296,7 +296,6 @@ h1 {
   transition: all 0.2s ease-in-out;
 }
 #app .navigation li a:hover {
-  border-right: 5px solid rgb(155, 12, 41);
   background-color: rgb(224, 54, 88);
 }
 #app .navigation li a:active, #app .navigation li a.active {
@@ -312,6 +311,75 @@ h1 {
 #app .contact__search, #app .contact__item {
   background-color: #fff;
   border-radius: 2.4rem;
+}
+#app .contact__item {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+#app .contact__item .heading {
+  font-size: 2rem;
+  font-weight: 700;
+}
+#app .contact__item .follower {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.8rem;
+  padding-bottom: 0.8rem;
+  margin-bottom: 0.8rem;
+}
+#app .contact__item .follower:not(:last-child) {
+  padding-bottom: 2.4rem;
+  border-bottom: 1px solid #b5b5b5;
+}
+#app .contact__item .follower figure {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+#app .contact__item .follower figure img {
+  max-width: 100%;
+  height: 5rem;
+  border: 3px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+#app .contact__item .follower figure figcaption {
+  margin-top: 0.8rem;
+  text-align: center;
+}
+#app .contact__item .follower__item {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.3;
+}
+#app .contact__item .follower__name {
+  font-weight: 700;
+}
+#app .contact__item .follower__datetime {
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+#app .contact__item .follower__counter {
+  display: flex;
+  justify-content: flex-end;
+}
+#app .contact__item .follower__counter--value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.2rem;
+  height: 1.2rem;
+  padding: 1.2rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #fff;
+  background-color: #f14668;
+  border-radius: 50%;
 }
 #app .message {
   flex: 1;
