--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -71,7 +71,6 @@
         transition: $transition;
 
         &:hover {
-          border-right: 5px solid rgb(155, 12, 41);
           background-color: rgb(224, 54, 88);
         }
 
@@ -93,9 +92,92 @@
 
     &__search,
     &__item {
-      // padding: 1.6rem;
       background-color: #fff;
       border-radius: $border-radius-primary;
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+
+      padding: 1.6rem;
+
+      .heading {
+        font-size: 2rem;
+        font-weight: 700;
+      }
+
+      .follower {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 0.8rem;
+
+        padding-bottom: 0.8rem;
+        margin-bottom: 0.8rem;
+
+        &:not(:last-child) {
+          padding-bottom: 2.4rem;
+          border-bottom: 1px solid #b5b5b5;
+        }
+
+        figure {
+          display: flex;
+          align-items: center;
+          gap: 0.8rem;
+
+          img {
+            max-width: 100%;
+            height: 5rem;
+            border: 3px solid white;
+            border-radius: 50%;
+            cursor: pointer;
+          }
+
+          figcaption {
+            margin-top: 0.8rem;
+            text-align: center;
+          }
+        }
+
+        &__item {
+          display: flex;
+          flex-direction: column;
+          line-height: 1.3;
+        }
+
+        &__name {
+          font-weight: 700;
+        }
+
+        &__datetime {
+          display: flex;
+          justify-content: flex-end;
+          font-weight: 600;
+          font-size: 1.2rem;
+        }
+
+        &__counter {
+          display: flex;
+          justify-content: flex-end;
+
+          &--value {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            width: 1.2rem;
+            height: 1.2rem;
+            padding: 1.2rem;
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #fff;
+            background-color: #f14668;
+            border-radius: 50%;
+          }
+        }
+      }
     }
   }
 
