--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -332,7 +332,7 @@ h1 {
 }
 #app .contact__item .follower:not(:last-child) {
   padding-bottom: 2.4rem;
-  border-bottom: 1px solid #b5b5b5;
+  border-bottom: 1px solid #d4d2d2;
 }
 #app .contact__item .follower figure {
   display: flex;
@@ -341,7 +341,7 @@ h1 {
 }
 #app .contact__item .follower figure img {
   max-width: 100%;
-  height: 5rem;
+  height: 6rem;
   border: 3px solid white;
   border-radius: 50%;
   cursor: pointer;
@@ -383,6 +383,9 @@ h1 {
 }
 #app .message {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #fff;
 }
 
