--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -119,7 +119,7 @@
 
         &:not(:last-child) {
           padding-bottom: 2.4rem;
-          border-bottom: 1px solid #b5b5b5;
+          border-bottom: 1px solid #d4d2d2;
         }
 
         figure {
@@ -129,7 +129,7 @@
 
           img {
             max-width: 100%;
-            height: 5rem;
+            height: 6rem;
             border: 3px solid white;
             border-radius: 50%;
             cursor: pointer;
@@ -183,6 +183,10 @@
 
   .message {
     flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     background-color: #fff;
   }
