--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -98,6 +98,9 @@ h1 {
   flex-direction: column;
   position: relative;
 }
+.form__input.chat {
+  width: 87%;
+}
 .form__input .input-icon {
   position: absolute;
   top: 50%;
@@ -120,6 +123,38 @@ h1 {
 }
 .form__input .input-icon.password.show {
   display: block;
+}
+.form__input .attach-file,
+.form__input .chat-btn {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #dfdddd;
+}
+.form__input .attach-file {
+  right: -2.8rem;
+  padding: 2.5rem;
+}
+.form__input .chat-btn {
+  right: -8.4rem;
+  background-color: #dfdddd;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 5rem;
+}
+.form__input .chat-btn button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 2.4rem;
+  border: 1px solid #e0e0e0;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 5rem;
+  outline: none;
+  cursor: pointer;
 }
 .form__input input[type=text],
 .form__input input[type=search],
@@ -198,11 +233,12 @@ h1 {
   height: 30rem;
 }
 .form__input textarea.chat {
-  height: 5rem;
+  max-height: 5rem;
+  padding: 1.2rem 5.4rem;
   background-color: #f0f0f0;
   border-radius: 3rem;
   box-sizing: border-box;
-  overflow: hidden;
+  line-height: 1.5;
 }
 .form__input ::placeholder {
   color: #999;
@@ -237,13 +273,6 @@ h1 {
   cursor: pointer;
 }
 
-input[type=file] {
-  padding: 0.8rem 1.2rem 0.8rem 1.6rem;
-  display: none;
-  visibility: hidden;
-  cursor: pointer;
-}
-
 .icon {
   width: 2.4rem;
   stroke-width: 2px;
@@ -252,6 +281,15 @@ input[type=file] {
 .input-icon {
   stroke-width: 2px;
   cursor: pointer;
+}
+.input-icon.upload {
+  width: 100%;
+  height: 100%;
+  margin-left: -0.8rem;
+  padding: 1.2rem;
+}
+.input-icon.send {
+  margin-left: -0.8rem;
 }
 
 #app {
