--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -322,7 +322,7 @@ h1 {
 #app .navigation .profile figure img {
   max-width: 100%;
   height: 10rem;
-  border: 5px solid white;
+  border: 5px solid #fff;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -360,39 +360,49 @@ h1 {
   flex-direction: column;
   gap: 2.4rem;
 }
-#app .contact__search, #app .contact__item {
+#app .contact__search, #app .contact__heading, #app .contact__item, #app .contact__footer {
   background-color: #fff;
-  border-radius: 2.4rem;
 }
 #app .contact__search {
   position: sticky;
   top: 0;
   left: 0;
   width: 100%;
+  border-radius: 2.4rem;
+}
+#app .contact__heading {
+  padding: 1.6rem;
+  font-size: 2rem;
+  font-weight: 700;
+  border-top-left-radius: 2.4rem;
+  border-top-right-radius: 2.4rem;
+  border-bottom: 1px solid #d4d2d2;
 }
 #app .contact__item {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
-  padding: 1.6rem;
+  margin: -2.4rem 0;
+  padding: 1.6rem 1.6rem 0;
   overflow-y: auto;
   scrollbar-width: thin;
-  scrollbar-color: #ddd7d8 #ece6e7;
+  scrollbar-color: #ddd7d8 #fff;
 }
-#app .contact__item .heading {
-  font-size: 2rem;
-  font-weight: 700;
+#app .contact__footer {
+  padding: 1.2rem;
+  border-bottom-left-radius: 2.4rem;
+  border-bottom-right-radius: 2.4rem;
 }
 #app .follower {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 0.8rem;
-  padding-bottom: 0.8rem;
-  margin-bottom: 0.8rem;
+  padding-bottom: 0.2rem;
+  margin-bottom: 0.2rem;
 }
 #app .follower:not(:last-child) {
-  padding-bottom: 2.4rem;
+  padding-bottom: 1.9rem;
   border-bottom: 1px solid #d4d2d2;
 }
 #app .follower figure {
