feat: add background color to send chat button

--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -139,6 +139,7 @@
 
         width: 100%;
         padding: 2.4rem;
+        background-color: #f14668;
         border: 1px solid #e0e0e0;
         border-top-right-radius: 5rem;
         border-bottom-right-radius: 5rem;
