--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -150,6 +150,7 @@ h1 {
   align-items: center;
   width: 100%;
   padding: 2.4rem;
+  background-color: #f14668;
   border: 1px solid #e0e0e0;
   border-top-right-radius: 5rem;
   border-bottom-right-radius: 5rem;
@@ -280,7 +281,6 @@ h1 {
 
 .input-icon {
   stroke-width: 2px;
-  cursor: pointer;
 }
 .input-icon.upload {
   width: 100%;
@@ -289,7 +289,13 @@ h1 {
   padding: 1.2rem;
 }
 .input-icon.send {
+  stroke: #fff;
   margin-left: -0.8rem;
+}
+
+.icon,
+.input-icon {
+  cursor: pointer;
 }
 
 #app {
@@ -360,7 +366,7 @@ h1 {
   flex-direction: column;
   gap: 2.4rem;
 }
-#app .contact__search, #app .contact__heading, #app .contact__item, #app .contact__footer {
+#app .contact__search, #app .contact__header, #app .contact__item, #app .contact__footer {
   background-color: #fff;
 }
 #app .contact__search {
@@ -370,7 +376,7 @@ h1 {
   width: 100%;
   border-radius: 2.4rem;
 }
-#app .contact__heading {
+#app .contact__header {
   padding: 1.6rem;
   font-size: 2rem;
   font-weight: 700;
