--- a/sass/components/_icon.scss
+++ b/sass/components/_icon.scss
@@ -5,7 +5,6 @@
 
 .input-icon {
   stroke-width: 2px;
-  cursor: pointer;
 
   &.upload {
     width: 100%;
@@ -15,6 +14,12 @@
   }
 
   &.send {
+    stroke: #fff;
     margin-left: -0.8rem;
   }
+}
+
+.icon,
+.input-icon {
+  cursor: pointer;
 }
