--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -87,7 +87,7 @@
     gap: 2.4rem;
 
     &__search,
-    &__heading,
+    &__header,
     &__item,
     &__footer {
       background-color: #fff;
@@ -102,7 +102,7 @@
       border-radius: $border-radius-primary;
     }
 
-    &__heading {
+    &__header {
       padding: 1.6rem;
       font-size: 2rem;
       font-weight: 700;
