feat: add height of 100vh to contact item section

--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -116,6 +116,7 @@
       flex-direction: column;
       gap: 1.6rem;
 
+      height: 100vh;
       margin: -2.4rem 0;
       padding: 1.6rem 1.6rem 0;
       overflow-y: auto;
