--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -388,6 +388,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
+  height: 100vh;
   margin: -2.4rem 0;
   padding: 1.6rem 1.6rem 0;
   overflow-y: auto;
