--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -22,11 +22,15 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 3.2rem;
+    gap: 1.6rem;
 
     padding: 2.4rem 0 1.6rem;
     background-color: #f14668;
     overflow: auto;
+
+    .heading-1 {
+      text-align: center;
+    }
 
     .profile {
       margin: 0 auto;
@@ -54,7 +58,7 @@
 
     li {
       list-style: none;
-      margin: 1.6rem 0;
+      margin: 0.8rem 0;
 
       a {
         display: flex;
@@ -105,7 +109,7 @@
     &__header {
       padding: 1.6rem;
       font-size: 2rem;
-      font-weight: 700;
+      font-weight: 600;
       border-top-left-radius: $border-radius-primary;
       border-top-right-radius: $border-radius-primary;
       border-bottom: 1px solid #d4d2d2;
