--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -44,8 +44,32 @@ h1 {
 }
 
 .heading-1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.heading-2 {
   font-size: 2.4rem;
-  font-weight: 300;
+  font-weight: 600;
+}
+
+.lead {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.highlight {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+p {
+  margin-bottom: 0.8rem;
+  font-size: 1.8rem;
 }
 
 .form {
@@ -77,11 +101,6 @@ h1 {
 .form fieldset legend {
   margin-bottom: 1.6rem;
 }
-.form__input-group {
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-}
 .form__group {
   display: grid;
   align-items: start;
@@ -91,6 +110,11 @@ h1 {
 }
 .form__group:not(:last-of-type) {
   margin-bottom: 1.6rem;
+}
+.form__input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
 }
 .form__label {
   display: flex;
@@ -498,6 +522,29 @@ h1 {
 #app .message__recipient figure figcaption {
   margin-top: 0.8rem;
   text-align: center;
+}
+
+#login {
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+  height: calc(100vh - 6.4rem);
+  margin: 3.2rem auto;
+  overflow: hidden;
+}
+#login .login,
+#login .landing {
+  padding: 2.4rem;
+  overflow: auto;
+}
+#login .login {
+  flex: 0 0 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 3.2rem;
+  background-color: #fff;
+  border-radius: 2.4rem;
 }
 
 /*# sourceMappingURL=app.css.map */
