--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -10,6 +10,30 @@ h1 {
 }
 
 .heading-1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.heading-2 {
   font-size: 2.4rem;
-  font-weight: 300;
+  font-weight: 600;
+}
+
+.lead {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.title {
+  font-weight: 700;
+}
+
+.highlight {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+p {
+  margin-bottom: 0.8rem;
+  font-size: 1.8rem;
 }
