--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -5,18 +5,15 @@
   font-size: 1.6rem;
 
   &__horizontal {
-    display: grid;
-    align-items: start;
-    grid-auto-flow: column;
-    grid-auto-columns: 1fr;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     gap: 1.6rem;
 
     width: 100%;
 
     button {
-      margin-top: 0.8rem;
-      padding: 1.2rem 1.2rem 1rem;
-      // border: 0.1rem solid $link-color-primary;
+      margin-top: -0.8rem;
     }
   }
 
