--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -5,7 +5,7 @@
   gap: 3.2rem;
 
   width: 100%;
-  height: calc(100vh - 6.4rem);
+  max-height: calc(100vh - 6.4rem);
   margin: 3.2rem auto;
   overflow: hidden;
 
