--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,19 +9,26 @@ h1 {
   color: #fff;
 }
 
+.brand .heading-1 {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
 .heading-1 {
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-weight: 700;
 }
 
 .heading-2 {
+  margin-bottom: 0.8rem;
   font-size: 2.4rem;
   font-weight: 600;
 }
 
 .lead {
+  margin-bottom: 1.8rem;
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .title {
@@ -29,7 +36,7 @@ h1 {
 }
 
 .highlight {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 400;
 }
 
