--- a/sass/layout/_auth.scss
+++ b/sass/layout/_auth.scss
@@ -1,30 +1,65 @@
 @import "../abstracts/variables";
 
-#login {
+#auth {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
   gap: 1.6rem;
 
   height: calc(100vh - 6.4rem);
   margin: 3.2rem auto;
   overflow: hidden;
 
-  .login,
-  .landing {
-    padding: 2.4rem;
-    overflow: auto;
+  .auth__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3.2rem;
+
+    width: 100%;
+    margin: 0 auto;
+
+    .brand {
+      flex: 0 0 40rem;
+    }
+
+    .signin {
+      flex: 1;
+
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+
+      input {
+        background-color: #fff;
+      }
+    }
   }
 
-  .login {
-    flex: 0 0 40%;
-
+  .auth__body {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 1.6rem;
+    align-items: center;
+    gap: 3.2rem;
 
-    background-color: #fff;
-    border-radius: $border-radius-primary;
+    .intro,
+    .signup {
+      overflow: auto;
+    }
 
+    .intro {
+      padding: 2.4rem 0;
+    }
+
+    .signup {
+      flex: 0 0 41rem;
+
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+
+      padding: 2.4rem;
+      background-color: #fff;
+      border-radius: $border-radius-primary;
+    }
   }
 }
