--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,3 +34,9 @@ a:link {
   padding: 1rem 1.6rem;
   text-decoration: none;
 }
+
+figcaption {
+  margin-top: 0.8rem;
+  font-weight: 600;
+  text-align: center;
+}
