--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,19 +1,3 @@
-/* Error: Can't find stylesheet to import.
- *    ,
- * 11 | @use "layout/auth";
- *    | ^^^^^^^^^^^^^^^^^^
- *    '
- *   sass\app.scss 11:1  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-* {
-  margin: 0;
-  padding: 0;
-}
-
 *,
 *::after,
 *::before {
@@ -39,10 +23,6 @@ body {
 
 img {
   display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a    \2577 \a 11 \2502  @use \"layout/auth\";\d\a    \2502  ^^^^^^^^^^^^^^^^^^\a    \2575 \a   sass\\app.scss 11:1  root stylesheet";
 }
 
 a:link {
@@ -230,14 +210,14 @@ p {
   outline: none;
   cursor: pointer;
 }
-.form__input input[type=text],
-.form__input input[type=search],
-.form__input input[type=email],
-.form__input input[type=password],
-.form__input input[type=number],
-.form__input input[type=tel],
-.form__input input[type=file],
-.form__input input[type=checkbox],
+.form__input input[type="text"],
+.form__input input[type="search"],
+.form__input input[type="email"],
+.form__input input[type="password"],
+.form__input input[type="number"],
+.form__input input[type="tel"],
+.form__input input[type="file"],
+.form__input input[type="checkbox"],
 .form__input select,
 .form__input textarea {
   position: relative;
@@ -253,31 +233,32 @@ p {
   transition: all 0.2s ease-in-out;
   cursor: pointer;
 }
-.form__input input[type=text]:hover, .form__input input[type=text]:focus,
-.form__input input[type=search]:hover,
-.form__input input[type=search]:focus,
-.form__input input[type=email]:hover,
-.form__input input[type=email]:focus,
-.form__input input[type=password]:hover,
-.form__input input[type=password]:focus,
-.form__input input[type=number]:hover,
-.form__input input[type=number]:focus,
-.form__input input[type=tel]:hover,
-.form__input input[type=tel]:focus,
-.form__input input[type=file]:hover,
-.form__input input[type=file]:focus,
-.form__input input[type=checkbox]:hover,
-.form__input input[type=checkbox]:focus,
+.form__input input[type="text"]:hover,
+.form__input input[type="text"]:focus,
+.form__input input[type="search"]:hover,
+.form__input input[type="search"]:focus,
+.form__input input[type="email"]:hover,
+.form__input input[type="email"]:focus,
+.form__input input[type="password"]:hover,
+.form__input input[type="password"]:focus,
+.form__input input[type="number"]:hover,
+.form__input input[type="number"]:focus,
+.form__input input[type="tel"]:hover,
+.form__input input[type="tel"]:focus,
+.form__input input[type="file"]:hover,
+.form__input input[type="file"]:focus,
+.form__input input[type="checkbox"]:hover,
+.form__input input[type="checkbox"]:focus,
 .form__input select:hover,
 .form__input select:focus,
 .form__input textarea:hover,
 .form__input textarea:focus {
   background-color: rgba(217, 217, 217, 0.25);
 }
-.form__input input[type=password] {
+.form__input input[type="password"] {
   padding-right: 4.4rem;
 }
-.form__input input[type=file] {
+.form__input input[type="file"] {
   padding: 0.8rem 1.2rem 0.8rem 1.6rem;
   display: none;
   visibility: hidden;
@@ -285,7 +266,9 @@ p {
 }
 .form__input select {
   appearance: none;
-  background: rgba(217, 217, 217, 0.15) url("../../../public/icons/chevron-down.svg") no-repeat calc(100% - 0.8rem) center;
+  background: rgba(217, 217, 217, 0.15)
+    url("../../../public/icons/chevron-down.svg") no-repeat calc(100% - 0.8rem)
+    center;
   background-size: 3.6rem;
   cursor: pointer;
 }
@@ -339,7 +322,7 @@ p {
   display: flex;
   margin-left: 0.3rem;
 }
-.form .checkbox input[type=checkbox] {
+.form .checkbox input[type="checkbox"] {
   width: 1.6rem;
   height: 1.6rem;
   border-radius: 5rem;
@@ -428,7 +411,8 @@ p {
 #app .navigation li a:hover {
   background-color: rgb(224, 54, 88);
 }
-#app .navigation li a:active, #app .navigation li a.active {
+#app .navigation li a:active,
+#app .navigation li a.active {
   border-right: 5px solid rgb(155, 12, 41);
   background-color: rgb(224, 54, 88);
 }
@@ -438,7 +422,10 @@ p {
   flex-direction: column;
   gap: 2.4rem;
 }
-#app .contact__search, #app .contact__header, #app .contact__item, #app .contact__footer {
+#app .contact__search,
+#app .contact__header,
+#app .contact__item,
+#app .contact__footer {
   background-color: #fff;
 }
 #app .contact__search {
