--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -157,7 +157,43 @@ p {
   position: relative;
 }
 .form__input.chat {
-  width: 89%;
+  width: 79%;
+}
+.form__input.chat .chat-btns {
+  position: sticky;
+}
+.form__input.chat .chat-btns .attach-file,
+.form__input.chat .chat-btns .chat-btn {
+  position: absolute;
+  top: 0;
+  transform: translate(2.2rem, -100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #dfdddd;
+}
+.form__input.chat .chat-btns .attach-file {
+  right: -2.8rem;
+  padding: 2.5rem;
+}
+.form__input.chat .chat-btns .chat-btn {
+  right: -7.6rem;
+  background-color: #dfdddd;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 5rem;
+}
+.form__input.chat .chat-btns .chat-btn button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 2.4rem;
+  background-color: #f14668;
+  border: 1px solid #e0e0e0;
+  border-top-right-radius: 3rem;
+  border-bottom-right-radius: 3rem;
+  outline: none;
+  cursor: pointer;
 }
 .form__input .input-icon {
   position: absolute;
@@ -181,39 +217,6 @@ p {
 }
 .form__input .input-icon.password.show {
   display: block;
-}
-.form__input .attach-file,
-.form__input .chat-btn {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #dfdddd;
-}
-.form__input .attach-file {
-  right: -2.8rem;
-  padding: 2.5rem;
-}
-.form__input .chat-btn {
-  right: -7.6rem;
-  background-color: #dfdddd;
-  border-top-right-radius: 5rem;
-  border-bottom-right-radius: 5rem;
-}
-.form__input .chat-btn button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  padding: 2.4rem;
-  background-color: #f14668;
-  border: 1px solid #e0e0e0;
-  border-top-right-radius: 5rem;
-  border-bottom-right-radius: 5rem;
-  outline: none;
-  cursor: pointer;
 }
 .form__input input[type=text],
 .form__input input[type=search],
@@ -292,11 +295,15 @@ p {
   height: 30rem;
 }
 .form__input textarea.chat {
-  max-height: 5rem;
-  padding: 1.2rem 5.4rem;
+  height: 5rem;
+  padding: 1.2rem 1.2rem 1.2rem 5.4rem;
   background-color: #f0f0f0;
-  border-radius: 3rem;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 3rem;
+  border-bottom-right-radius: 0;
   box-sizing: border-box;
+  overflow: hidden;
   line-height: 1.5;
 }
 .form__input ::placeholder {
@@ -520,6 +527,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 1.6rem;
   padding: 2.4rem 1.6rem;
   background-color: #fff;
 }
