--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -68,7 +68,55 @@
     position: relative;
 
     &.chat {
-      width: 89%;
+      width: 79%;
+
+      .chat-btns {
+        position: sticky;
+
+        .attach-file,
+        .chat-btn {
+          position: absolute;
+
+          top: 0;
+          transform: translate(2.2rem, -100%);
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: #dfdddd;
+        }
+
+        .attach-file {
+          right: -2.8rem;
+
+          padding: 2.5rem;
+          // border-top-right-radius: 5rem;
+          // border-bottom-right-radius: 5rem;
+        }
+
+        .chat-btn {
+          right: -7.6rem;
+
+          background-color: #dfdddd;
+          border-top-right-radius: 5rem;
+          border-bottom-right-radius: 5rem;
+
+          button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            width: 100%;
+            padding: 2.4rem;
+            background-color: #f14668;
+            border: 1px solid #e0e0e0;
+            border-top-right-radius: 3rem;
+            border-bottom-right-radius: 3rem;
+            outline: none;
+            cursor: pointer;
+          }
+        }
+      }
     }
 
     .input-icon {
@@ -98,50 +146,6 @@
         &.show {
           display: block;
         }
-      }
-    }
-
-    .attach-file,
-    .chat-btn {
-      position: absolute;
-
-      top: 50%;
-      transform: translate(-50%, -50%);
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #dfdddd;
-    }
-
-    .attach-file {
-      right: -2.8rem;
-
-      padding: 2.5rem;
-      // border-top-right-radius: 5rem;
-      // border-bottom-right-radius: 5rem;
-    }
-
-    .chat-btn {
-      right: -7.6rem;
-
-      background-color: #dfdddd;
-      border-top-right-radius: 5rem;
-      border-bottom-right-radius: 5rem;
-
-      button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        width: 100%;
-        padding: 2.4rem;
-        background-color: #f14668;
-        border: 1px solid #e0e0e0;
-        border-top-right-radius: 5rem;
-        border-bottom-right-radius: 5rem;
-        outline: none;
-        cursor: pointer;
       }
     }
 
@@ -226,12 +230,15 @@
       }
 
       &.chat {
-        max-height: 5rem;
-        padding: 1.2rem 5.4rem;
+        height: 5rem;
+        padding: 1.2rem 1.2rem 1.2rem 5.4rem;
         background-color: #f0f0f0;
-        border-radius: 3rem;
+        border-top-left-radius: 3rem;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 3rem;
+        border-bottom-right-radius: 0;
         box-sizing: border-box;
-        // overflow: hidden;
+        overflow: hidden;
         line-height: 1.5;
       }
     }
