--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -208,6 +208,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 1.6rem;
 
     padding: 2.4rem 1.6rem;
     background-color: #fff;
