--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -70,7 +70,7 @@
     &.chat {
       width: 78%;
 
-      .message-btn {
+      .message__btn {
         position: sticky;
 
         .attach-file,
@@ -232,10 +232,10 @@
         background-color: #f0f0f0;
         border-radius: 3rem;
         box-sizing: border-box;
+        line-height: 1.5;
         overflow-y: auto;
         scrollbar-width: thin;
         scrollbar-color: #ddd7d8 #fff;
-        line-height: 1.5;
       }
     }
 
