feat: add user comment markup in messages.html; add comment section styles to stylesheet

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -35,6 +35,14 @@ a:link {
   text-decoration: none;
 }
 
+figure {
+  img {
+    border: 5px solid #fff;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
+
 figcaption {
   margin-top: 0.8rem;
   font-weight: 600;
