--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,3 +44,13 @@ p {
   margin-bottom: 0.8rem;
   font-size: 1.6rem;
 }
+
+.contact__header {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.message__comment--header {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
