--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -35,6 +35,12 @@ a:link {
   text-decoration: none;
 }
 
+figure img {
+  border: 5px solid #fff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 figcaption {
   margin-top: 0.8rem;
   font-weight: 600;
@@ -84,6 +90,16 @@ h1 {
 p {
   margin-bottom: 0.8rem;
   font-size: 1.6rem;
+}
+
+.contact__header {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.message__comment--header {
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .btn {
@@ -233,7 +249,7 @@ p {
   font-size: inherit;
   font-weight: inherit;
   padding: 1.6rem 1.6rem 1.6rem 5.4rem;
-  border: 0.1rem solid #e0e0e0;
+  border: 1px solid #e0e0e0;
   border-radius: 3rem;
   background-color: rgba(217, 217, 217, 0.15);
   outline: none;
@@ -393,9 +409,6 @@ p {
 #app .navigation .profile figure img {
   max-width: 100%;
   height: 8rem;
-  border: 5px solid #fff;
-  border-radius: 50%;
-  cursor: pointer;
 }
 #app .navigation ul {
   margin-left: 1.6rem;
@@ -440,8 +453,6 @@ p {
 }
 #app .contact__header {
   padding: 1.6rem;
-  font-size: 2rem;
-  font-weight: 600;
   border-top-left-radius: 2.4rem;
   border-top-right-radius: 2.4rem;
   border-bottom: 1px solid #d4d2d2;
@@ -482,9 +493,6 @@ p {
 #app .follower figure img {
   max-width: 100%;
   height: 4.8rem;
-  border: 3px solid white;
-  border-radius: 50%;
-  cursor: pointer;
 }
 #app .follower figure.recipient img {
   height: 6.4rem;
@@ -542,9 +550,76 @@ p {
 #app .message__recipient figure img {
   max-width: 100%;
   height: 8rem;
-  border: 3px solid white;
-  border-radius: 50%;
-  cursor: pointer;
+}
+#app .message__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  height: 100%;
+}
+#app .message__container figure {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+#app .message__container figure img {
+  max-width: 100%;
+  height: 3.2rem;
+  border: 2px solid #fff;
+}
+#app .message__container figure figcaption {
+  margin-top: 0 !important;
+}
+#app .message__container .comment__body {
+  display: flex;
+  flex-direction: column;
+  height: 17rem;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #ddd7d8 #fff;
+}
+#app .message__body {
+  padding: 1.6rem;
+  background-color: #f5f5f5;
+  border: 1px solid #e0e0e0;
+  border-radius: 3rem;
+}
+#app .message__comment--header, #app .message__comment--footer {
+  padding: 1.6rem;
+  background-color: #f5f5f5;
+}
+#app .message__comment--header {
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+  border-bottom: 1px solid #d4d2d2;
+}
+#app .message__comment--user, #app .message__comment--body {
+  background-color: #f5f5f5;
+}
+#app .message__comment--body {
+  padding: 0 1.6rem 0.8rem;
+  font-size: 1.4rem;
+  height: 17rem;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #ddd7d8 #f5f5f5;
+}
+#app .message__comment--content {
+  padding: 1.6rem 0;
+  border-bottom: 1px solid #d4d2d2;
+}
+#app .message__comment--user {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
+}
+#app .message__comment--display-name {
+  font-size: 1.4rem;
+}
+#app .message__comment--footer {
+  border-bottom-left-radius: 3rem;
+  border-bottom-right-radius: 3rem;
 }
 
 #auth {
