--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -164,7 +164,7 @@
       font-weight: inherit;
       padding: 1.6rem 1.6rem 1.6rem 5.4rem;
       // color: $font-color-primary;
-      border: 0.1rem solid #e0e0e0;
+      border: 1px solid #e0e0e0;
       border-radius: 3rem;
       background-color: rgba(217, 217, 217, 0.15);
       outline: none;
