--- a/sass/layout/_app.scss
+++ b/sass/layout/_app.scss
@@ -38,9 +38,6 @@
         img {
           max-width: 100%;
           height: 8rem;
-          border: 5px solid #fff;
-          border-radius: 50%;
-          cursor: pointer;
         }
       }
     }
@@ -103,8 +100,6 @@
 
     &__header {
       padding: 1.6rem;
-      font-size: 2rem;
-      font-weight: 600;
       border-top-left-radius: $border-radius-primary;
       border-top-right-radius: $border-radius-primary;
       border-bottom: 1px solid #d4d2d2;
@@ -152,9 +147,6 @@
       img {
         max-width: 100%;
         height: 4.8rem;
-        border: 3px solid white;
-        border-radius: 50%;
-        cursor: pointer;
       }
 
       &.recipient {
@@ -226,10 +218,98 @@
         img {
           max-width: 100%;
           height: 8rem;
-          border: 3px solid white;
-          border-radius: 50%;
-          cursor: pointer;
         }
+      }
+    }
+
+    &__container {
+      display: flex;
+      flex-direction: column;
+      gap: 1.6rem;
+
+      height: 100%;
+
+      figure {
+        display: flex;
+        align-items: center;
+        gap: 0.8rem;
+
+        img {
+          max-width: 100%;
+          height: 3.2rem;
+          border: 2px solid #fff;
+        }
+
+        figcaption {
+          margin-top: 0 !important;
+        }
+      }
+
+      .comment__body {
+        display: flex;
+        flex-direction: column;
+
+        height: 17rem;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: #ddd7d8 #fff;
+      }
+    }
+
+    &__body {
+      padding: 1.6rem;
+      background-color: #f5f5f5;
+      border: 1px solid #e0e0e0;
+      border-radius: 3rem;
+    }
+
+    &__comment {
+      &--header,
+      &--footer {
+        padding: 1.6rem;
+        background-color: #f5f5f5;
+      }
+
+      &--header {
+        border-top-left-radius: 3rem;
+        border-top-right-radius: 3rem;
+        border-bottom: 1px solid #d4d2d2;
+      }
+
+      &--user,
+      &--body {
+        background-color: #f5f5f5;
+      }
+
+      &--body {
+        padding: 0 1.6rem 0.8rem;
+        font-size: 1.4rem;
+        height: 17rem;
+        overflow-y: auto;
+        scrollbar-width: thin;
+        scrollbar-color: #ddd7d8 #f5f5f5;
+      }
+
+      &--content {
+        // margin-bottom: 0.8rem;
+        padding: 1.6rem 0;
+        border-bottom: 1px solid #d4d2d2;
+      }
+
+      &--user {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 1.4rem;
+      }
+
+      &--display-name {
+        font-size: 1.4rem;
+      }
+
+      &--footer {
+        border-bottom-left-radius: 3rem;
+        border-bottom-right-radius: 3rem;
       }
     }
   }
